--- a/tex/Figures/figphylo.tex
+++ b/tex/Figures/figphylo.tex
@@ -1,7 +1,7 @@
 \begin{tikzpicture}[font=\bf\sffamily\fontsize{9}{9}\selectfont]
 
   
-\node[] (A) at (0,0) {\includegraphics[width=.9\textwidth]{Figures/riskyphylo6_collapsed_19}};
+\node[] (A) at (0,0) {\includegraphics[width=.9\textwidth]{Figures/riskyphylo6.25_collapsed_20}};
 
 \draw[line width=6pt] ([yshift=.5in,xshift=1.28in]A.south) node (DA) [left,below]{6.0} -- ++(.7in,0) node (DB) [right,below] {6.7};
 \node[anchor=south] (L1)  at ([yshift=.1in]$(DA.north)!.5!(DB.north)$) {estimated IRAT emergence score};
