--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -68,3 +68,11 @@ $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uc
 \def\E{\mathcal{E}}
 \def\dst{x_\star^{t+\delta}}
 \def\dsta{x^{t+\delta}}
+
+\definecolor{colh1n1x}{HTML}{551177}
+\definecolor{colh3n2x}{HTML}{0077FF}
+\definecolor{colh5n1x}{HTML}{991133}
+\definecolor{colh7n9x}{HTML}{aa6622}
+\definecolor{colh9n2x}{HTML}{8877FF}
+\definecolor{colh3n3x}{HTML}{FF0000}
+\definecolor{colh1n2x}{HTML}{337733}
